@startuml

title __SRC's Class Diagram__\n

  package  {
    class Main {
        {static} + main()
    }
  }
  

  package  {
    interface MultipleEntryDictionary {
        {abstract} + add()
        {abstract} + translate()
        {abstract} + remove()
    }
  }
  

  package  {
    class Person {
        - name : String
        - phoneNumber : String
        - streetAddr : String
        - city : String
        + Person()
        + Person()
        + getName()
        + getPhoneNumber()
        + getStreetAddr()
        + getCity()
        + setPhoneNumber()
        + setStreetAddr()
        + setCity()
    }
  }
  

  package  {
    class Phonebook {
        - phoneBook : Map<String, Set<Person>>
        - scan : Scanner
        + Phonebook()
        + addPerson()
        + searchByName()
        + searchByNumber()
        + addAddress()
        + searchInfo()
        + add()
        + translate()
        + remove()
        + filterSearch()
    }
  }
  

  package  {
    class UserInterface {
        - scan : Scanner
        + UserInterface()
        + start()
        {static} + menu()
    }
  }
  

  Phonebook -up-|> MultipleEntryDictionary
  UserInterface o-- Phonebook : phoneBook


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
